# SunPilot

./: .env.example  .gitignore  AGENTS.md  LICENSE  pyproject.toml
ai-engine/: config.py  main.py  requirements.txt
ai-engine/agents/: agent_registry.py  base.py  classifier_agent.py  escalation_agent.py  escalation_guards.py  extract_agent.py  intake_agent.py  intent_agent.py  notification_agent.py  reply_agent.py  resolution_agent.py  tool_agent.py  verify_agent.py
ai-engine/data/: agent_cards.json  call_transcripts.json  evaluation_samples.json  tickets.json  tools.json  workflow_config.json
ai-engine/evaluation/: evaluator.py  mysql_smoke_utils.py  run_module_f.py  smoke_module_a.py  smoke_module_b.py  smoke_module_c.py  smoke_module_d.py  smoke_module_e.py  smoke_module_f.py  smoke_module_i1_database.py  smoke_module_i2_crud.py  smoke_module_i3_mock_tools.py  smoke_module_k_workflow_routing.py  smoke_module_m_call_intake.py  smoke_module_o_tool_calling.py  smoke_module_p_agent_contracts.py  smoke_module_p_architecture_guardrails.py  smoke_module_p_workflow_contracts.py
ai-engine/models/: __init__.py  agent_card.py  agent_contracts.py  agent_trace.py  ai_result.py  api_schemas.py  database.py  repositories.py  ticket.py  tool_schemas.py  workflow.py
ai-engine/orchestrator/: orchestrator.py  pipeline_context.py  schema_validator.py  sse_bridge.py  state_machine.py  trace.py  workflow_config.py
ai-engine/scripts/: reset_demo_data.py
doc/: README.md  业务逻辑.md  启动与使用指南.md  工单系统字段.md  项目要求.md  项目详细背景.md
frontend/: README.md  package-lock.json  package.json
(+107 files in other folders)
